# irr-filter-gen

./: Cargo.toml
.github/workflows/: CI.yml
libirr/: Cargo.toml
libirr/src/: irr.rs  lib.rs
pylibirr/: Cargo.toml  pyproject.toml  test.py
pylibirr/src/: client.rs  lib.rs
